--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 *{margin: 0;padding: 0;}
 
-body{font-size: 12px;font-family: 微软雅黑;background: rgb(48, 65, 86);color: #4b4b4b;}
+body{font-size: 12px;font-family: weiruanyahei;background: rgb(48, 65, 86);color: #4b4b4b;}
 a{color: #ccc;text-decoration: none;}
 
 #id_container{height: 100%;}
@@ -24,14 +24,15 @@ a{color: #ccc;text-decoration: none;}
 
 /*内容*/
 #id_main{margin-left: 160px;background:#fff;height: 100%;}
-#id_main_top_left{float: left;margin-left: 20px;}
-#id_main_top{width: 100%;height: 50px;line-height: 50px;background: #fff;box-shadow: 0px 0px 40px 0px rgba(82, 63, 105, 0.1);}
+#id_main_top_left{float: left;margin-left: 20px;font-size: 14px;}
+#id_main_top{width: 100%;height: 50px;line-height: 50px;background: #fff;box-shadow: 0 1px 4px rgba(0,21,41,.08);}
 #id_main_top_right{float: right;margin-right: 30px;color: #6c7293;}
 #id_main_{}
 
 
 /*详细内容*/
-.tblist {width:100%;border-collapse: collapse;border: solid #eeecec;border-width: 1px 0 0 1px;text-align: center;color: #4b4b4;}
+.tblist {width:100%;border-collapse: collapse;border: solid #eeecec;border-width: 1px 0 0 1px;text-align: center;color: #606266;}
+.tblist a{color: #606266;}
 .tblist tr{height: 36px;}
 .tblisthover tr:hover{background: #f5f5f5;}
 .tblist tr.title {text-align: center; font-weight:bold;color: #9da1c4;}
