--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -24,7 +24,7 @@ a{color: #ccc;text-decoration: none;}
 
 /*内容*/
 #id_main{margin-left: 160px;background:#fff;height: 100%;}
-#id_main_top_left{float: left;margin-left: 20px;font-size: 14px;}
+#id_main_top_left{float: left;margin-left: 10px;font-size: 14px;}
 #id_main_top{width: 100%;height: 50px;line-height: 50px;background: #fff;box-shadow: 0 1px 4px rgba(0,21,41,.08);}
 #id_main_top_right{float: right;margin-right: 30px;color: #6c7293;}
 #id_main_{}
@@ -33,7 +33,7 @@ a{color: #ccc;text-decoration: none;}
 /*详细内容*/
 .tblist {width:100%;border-collapse: collapse;border: solid #eeecec;border-width: 1px 0 0 1px;text-align: center;color: #606266;}
 .tblist a{color: #606266;}
-.tblist tr{height: 36px;}
+.tblist tr{height: 40px;}
 .tblisthover tr:hover{background: #f5f5f5;}
 .tblist tr.title {text-align: center; font-weight:bold;color: #9da1c4;}
 .tblist tr.title:hover {background: #fff;}
@@ -161,7 +161,7 @@ a{color: #ccc;text-decoration: none;}
 }
 
 
-.btn {
+a.btn {
     display: inline-block;
     height: 22px;
     line-height: 22px;
@@ -175,3 +175,22 @@ a{color: #ccc;text-decoration: none;}
     border-radius: 2px;
     cursor: pointer;
 }
+
+.navbar{
+    line-height: 46px;
+    height: 100%;
+    float: left;
+    cursor: pointer;
+    -webkit-transition: background .3s;
+    transition: background .3s;
+    -webkit-tap-highlight-color: transparent;
+    padding: 15px 0px 0px 10px;
+}
+.navbar .hamburger{
+	display: inline-block;
+    vertical-align: middle;
+    width: 20px;
+    height: 20px;
+    line-height: 46px;
+}
+    
