--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -25,8 +25,10 @@ a{color: #ccc;text-decoration: none;}
 /*内容*/
 #id_main{margin-left: 160px;background:#fff;height: 100%;}
 #id_main_top_left{float: left;margin-left: 10px;font-size: 14px;}
-#id_main_top{width: 100%;height: 50px;line-height: 50px;background: #fff;box-shadow: 0 1px 4px rgba(0,21,41,.08);}
+#id_main_top{width: 100%;height: 50px;line-height: 50px;background: #fff;box-shadow: 0 1px 4px rgba(0,21,41,.08);z-index: 99999;position: relative;}
 #id_main_top_right{float: right;margin-right: 30px;color: #6c7293;}
+
+#cf{background-color: #f8f8f8;box-sizing: border-box;height: 42px;line-height: 42px;border-bottom: 1px solid #ddd;}
 #id_main_{}
 
 
