--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -54,14 +54,13 @@ a{color: #ccc;text-decoration: none;}
     content: "\E60B";
 }
 
-
-#cf{background-color: #f8f8f8;box-sizing: border-box;height: 42px;line-height: 42px;border-bottom: 1px solid #ddd;}
+#cf{background-color: #f8f8f8;height: 52px;line-height: 50px;margin-bottom: 18px;}
 #id_main_{}
 
 /*详细内容*/
 .tblist {width:100%;border-collapse: collapse;border: solid #eeecec;border-width: 1px 0 0 1px;text-align: center;color: #606266;}
 .tblist a{color: #606266;}
-.tblist tr{height: 40px;}
+.tblist tr{height: 34px;}
 .tblisthover tr:hover{background: #f5f5f5;}
 .tblist tr.title {text-align: center; font-weight:bold;color: #9da1c4;}
 .tblist tr.title:hover {background: #fff;}
@@ -187,17 +186,23 @@ a{color: #ccc;text-decoration: none;}
 
 a.btn {
     display: inline-block;
-    height: 22px;
-    line-height: 22px;
+    height: 30px;
+    line-height: 30px;
     padding: 0 10px;
-    background-color: #4caf50;
-    color: #fff;
+    background-color: #fff;
     white-space: nowrap;
     text-align: center;
     font-size: 12px;
     border: none;
     border-radius: 2px;
     cursor: pointer;
+    border: 1px solid #dcdfe6;
+    color: #606266;
+}
+a.btn:hover{
+	color: #3a8ee6;
+    border-color: #3a8ee6;
+    background-color: #ecf5ff;
 }
 
 .navbar{
